fix: make color contrast satisfactory

--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
 /* ====================== Restaurant Filtering ====================== */
 form {
-  background-color: #3397DB;
+  background-color: #0079ca;
 }
 
 fieldset {
@@ -57,8 +57,8 @@ select {
   width: 100%;
 }
 
-#restaurants-list li h1 {
-  color: #f18200;
+#restaurants-list li h2 {
+  color: #df7800;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -71,9 +71,9 @@ select {
 }
 
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #ff9922;
   border-bottom: 3px solid #eee;
-  color: #fff;
+  color: #3a3a3a;
   display: inline-block;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
