--- a/css/main.css
+++ b/css/main.css
@@ -8,12 +8,12 @@
 html {
   font-size: 16px;
 	font-family: Arial, Helvetica, sans-serif;
-	color: #333;
+	color: #000;
 	line-height: 1.5;
 }
 
 body {
-	background-color: #fdfdfd;
+	background-color: #fff;
 	margin: 0;
 	position:relative;
 }
@@ -38,7 +38,7 @@ main {
 
 footer {
   background-color: #444;
-  color: #aaa;
+  color: #fff;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
