--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -26,7 +26,7 @@ main {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-  color: #0275d8;
+  color: #006eb8;
   text-decoration: none;
 }
 
@@ -45,7 +45,7 @@ main > section:first-of-type {
 }
 
 #restaurant-name {
-  color: #f18200;
+  color: #d27100;
   font-size: 1.6rem;
   font-weight: 200;
   letter-spacing: 0;
@@ -82,7 +82,7 @@ main > section:first-of-type {
 }
 
 #reviews-container h2 {
-  color: #f58500;
+  color: #d27100;
   font-size: 2rem;
   font-weight: 300;
   letter-spacing: -1px;
